# aimrt_example

./: CMakeLists.txt  README.md  build.sh
executor_co/: CMakeLists.txt  build.sh
executor_co/cmake/: GetAimRT.cmake
executor_co/src/: main.cc
executor_co/src/install/: start_executor_co.sh
executor_co/src/install/cfg/: executor_co_cfg.yaml
executor_normal/: CMakeLists.txt  build.sh
executor_normal/cmake/: GetAimRT.cmake
executor_normal/src/: main.cc
executor_normal/src/install/: start_executor_normal.sh
executor_normal/src/install/cfg/: executor_normal_cfg.yaml
helloworld/: CMakeLists.txt  build.sh
helloworld/src/: main.cc
helloworld/src/install/: start_helloworld.sh
helloworld/src/install/cfg/: helloworld_cfg.yaml
my_normal_channel/: CMakeLists.txt  build.sh
my_normal_channel/cmake/: GetAimRT.cmake
my_normal_channel/src/: main.cc
my_normal_channel/src/install/: start_my_normal_channel.sh
my_normal_channel/src/install/cfg/: my_normal_channel_cfg.yaml
my_normal_channel/src/protocols/: CMakeLists.txt  string_msg.proto
my_normal_rpc/: CMakeLists.txt  build.sh
my_normal_rpc/src/: main.cc
my_normal_rpc/src/install/: start_my_normal_rpc.sh
my_normal_rpc/src/install/cfg/: my_normal_rpc_cfg.yaml
my_normal_rpc/src/protocols/: CMakeLists.txt  common.proto  my_rpc.proto
my_ros2_channel/: CMakeLists.txt
my_ros2_channel/src/: main.cc
my_ros2_channel/src/install/: start_my_ros2_channel.sh
my_ros2_channel/src/protocols/my_ros2_msg/: CMakeLists.txt  package.xml
my_ros2_channel/src/protocols/my_ros2_msg/msg/: MyData.msg
my_ros2_rpc/: CMakeLists.txt  build.sh
my_ros2_rpc/cmake/: GetAimRT.cmake
my_ros2_rpc/src/: main.cc
my_ros2_rpc/src/install/: start_my_ros2_rpc.sh
my_ros2_rpc/src/install/cfg/: my_ros2_rpc_cfg.yaml
my_ros2_rpc/src/protocols/my_ros2_rpc_msg/: CMakeLists.txt  package.xml
normal_channel/: CMakeLists.txt  build.sh
normal_channel/cmake/: GetAimRT.cmake
normal_channel/src/: main.cc
normal_channel/src/install/: start_normal_channel.sh
normal_channel/src/install/cfg/: normal_channel_cfg.yaml
ros2_channel/: CMakeLists.txt  build.sh
ros2_channel/cmake/: GetAimRT.cmake
ros2_channel/src/: main.cc
ros2_channel/src/install/: start_ros2_channel.sh
ros2_channel/src/install/cfg/: ros2_channel_cfg.yaml
